feat:Show application View

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@vueform/vueform": "^1.9.8",
     "axios": "^1.6.8",
     "pinia": "^2.1.7",
+    "pusher-js": "^8.4.0-rc2",
+    "sweetalert2": "^11.11.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
