--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.3",
+    "@sweetalert2/theme-bulma": "^5.0.16",
     "@vueform/vueform": "^1.9.9",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
