feat:add background image

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueform/vueform": "^1.9.8",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "pinia": "^2.1.7",
     "pusher-js": "^8.4.0-rc2",
     "sweetalert2": "^11.11.0",
