--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@vueform/vueform": "^1.9.9",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.3.0",
     "vue-sweetalert2": "^5.0.10"
   },
