--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/vue": "^2.1.3",
     "@sweetalert2/theme-bulma": "^5.0.16",
     "@vueform/vueform": "^1.9.9",
+    "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
@@ -26,6 +27,7 @@
     "sweetalert2": "^11.11.0",
     "vue": "^3.4.21",
     "vue-chartjs": "^5.3.1",
+    "vue-loading-overlay": "^4.0.0",
     "vue-router": "^4.3.0",
     "vue-sweetalert2": "^5.0.10"
   },
