--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.3",
+    "@rollup/rollup-linux-x64-musl": "^4.17.2",
     "@sweetalert2/theme-bulma": "^5.0.16",
     "@vueform/vueform": "^1.9.9",
     "axios": "^1.6.8",
